# SNN-CIFAR10

./: README.md  RESULTS.md  RTX_3090_info.md  SNN_FLOPs_memory_traffic_analysis.md  makefile  profile_results_cpu_vs_gpu.md  pyproject.toml
scripts/cnn/: train_cnn.py
scripts/mnist/snn/: es_mnist_subset_train_eval.py  test_snn_forward_mnist.py
scripts/snn/: test_snn_forward.py  train_es.py
scripts/snn/diagnostics/: es_subset_train_eval.py  overfit_one_batch_es.py  profile_onepass.py  sanity_backprop_one_epoch.py
src/cifar_baseline/: config.py  data.py  mnist_data.py  models.py  train.py  utils.py
src/cifar_baseline/cnn/: models.py  train.py
src/cifar_baseline/snn/: encoding.py  es.py  es_parallel.py  lif.py  mnist_snn_models.py  snn_models.py
